<resources>
    <string name="Grocery">Grocery</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about">About</string>
    <string name="about_title_fmt">About %s</string>
    <string name="account">Account</string>
    <string name="add">Add</string>
    <string name="addBudgetTitle">Add Budget</string>
    <string name="addExpenseDescription">Add an expense transaction</string>
    <string name="addExpenseDisabled">Adding an expense is disabled</string>
    <string name="addExpenseTransactionShortcutTitle">Add Expense Shortcut</string>
    <string name="addExpenseTransactionTitle">Add Expense</string>
    <string name="addRevenueDisabled">Adding a revenue is disabled</string>
    <string name="addRevenueTransactionShortcutTitle">Add Revenue Shortcut</string>
    <string name="addRevenueTransactionTitle">Add Revenue</string>
    <string name="addShortcuts">Add Shortcuts</string>
    <string name="addShortcutsTitle">Add Budget Manager Shortcut</string>
    <string name="allDates">All Dates</string>
    <string name="app_copyright_fmt">Copyright 2016-%d Branden Archer</string>
    <string name="app_intro_done_button">DONE</string>
    <string name="app_intro_skip_button">SKIP</string>
    <string name="app_libraries" formatted="false">%s uses the following third-party libraries: %s</string>
    <string name="app_license">Licensed under the GPLv3.</string>
    <string name="app_name">Budget Manager</string>
    <string name="app_resources" formatted="false">%s uses the following third-party resources: %s</string>
    <string name="app_revision_fmt">Revision Information: %s</string>
    <string name="app_revision_url">https://github.com/brarcher/budget-watch/releases</string>
    <string name="app_webpage_url">https://github.com/brarcher/budget-watch</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="budget">Budget</string>
    <string name="budgetDateRangeHelp">Select date range to display for budgets</string>
    <string name="budgetDescription">Create and manage budgets</string>
    <string name="budgetMissing">No budget selected</string>
    <string name="budgetTypeMissing">Budget type is empty</string>
    <string name="budgetValueMissing">Budget value is empty</string>
    <string name="budgetsTitle">Budgets</string>
    <string name="cancel">Cancel</string>
    <string name="capture">Capture</string>
    <string name="changeDateRange">Change date range</string>
    <string name="character_counter_pattern">%1$d / %2$d</string>
    <string name="clean">Clean</string>
    <string name="cleaning">Cleaning…</string>
    <string name="cleanupHelp">Select date; all receipts on or before the date will be deleted</string>
    <string name="confirm">Confirm</string>
    <string name="csv">CSV</string>
    <string name="date">Date</string>
    <string name="dateInvalid">Date invalid</string>
    <string name="dateRangeField">Date Range:</string>
    <string name="dateRangeFormat">%1$s ~ %2$s</string>
    <string name="debug_version_fmt">Version: %s</string>
    <string name="define_appintro" />
    <string name="delete">Delete</string>
    <string name="deleteBudgetConfirmation">Please confirm that you want to delete this budget. All transactions associated with this budget will remain.</string>
    <string name="deleteBudgetTitle">Remove Budget</string>
    <string name="deleteTransactionConfirmation">Please confirm that you want to delete this transaction.</string>
    <string name="deleteTransactionTitle">Remove Transaction</string>
    <string name="edit">Edit</string>
    <string name="editBudgetTitle">Edit Budget</string>
    <string name="editExpenseTransactionTitle">Edit Expense</string>
    <string name="editRevenueTransactionTitle">Edit Revenue</string>
    <string name="encodingReceipt">Encoding receipt</string>
    <string name="endDate">End date</string>
    <string name="expensesTitle">Expenses</string>
    <string name="exportDateRangeHelp">Select date range of transactions to export</string>
    <string name="exportFailed">Failed to export: %1$s</string>
    <string name="exportFailedTitle">Export failed</string>
    <string name="exportName">Export</string>
    <string name="exportOptionExplanation">Data is written to the top directory in external storage.</string>
    <string name="exportProgressFormat" formatted="false">Exported %d of %d entries</string>
    <string name="exportSuccessfulTitle">Export successful</string>
    <string name="exportedTo">Exported to: %1$s</string>
    <string name="exporting">Exporting…</string>
    <string name="fileFormat">File format</string>
    <string name="fraction">%1$d/%2$d</string>
    <string name="icon">icon</string>
    <string name="iconDescription">BudgetManager icon</string>
    <string name="importExport">Import/Export</string>
    <string name="importExportHelp">Backed up data can allow you to move your budgets and transactions to another device.</string>
    <string name="importExportTitle">Import/Export</string>
    <string name="importFailed">Failed to import: %1$s</string>
    <string name="importFailedTitle">Import failed</string>
    <string name="importOptionApplicationButton">Use external application</string>
    <string name="importOptionApplicationExplanation">Use an external application like Dropbox, Google Drive, or your favorite file manager to open a file.</string>
    <string name="importOptionApplicationTitle">Import from filesystem</string>
    <string name="importOptionFilesystemButton">From filesystem</string>
    <string name="importOptionFilesystemExplanation">Choose a specific file from the filesystem.</string>
    <string name="importOptionFilesystemTitle">Import from filesystem</string>
    <string name="importOptionFixedButton">Use export location</string>
    <string name="importOptionFixedExplanation">Import from the same location on the filesystem that is written to on export.</string>
    <string name="importOptionFixedTitle">Import from export location</string>
    <string name="importProgressFormat">Imported %d entries</string>
    <string name="importSuccessfulTitle">Import successful</string>
    <string name="importedFrom">Imported from: %1$s</string>
    <string name="importing">Importing…</string>
    <string name="intro1Description">Manage your budget by tracking you spending.</string>
    <string name="intro1Title">"Welcome to Budget Watch
"</string>
    <string name="intro2Description">"You may create as many budgets as you would like to track, each with their own max monthly spending.

To create a budget, touch Budgets from the main screen, then click the plus in the menu."</string>
    <string name="intro2Title">"Budgets
"</string>
    <string name="intro3Description">"After creating a budget, transactions can be added that apply to budgets.

To create a transaction touch Transactions from the main screen. Select the Expenses or Revenues tab and click on the plus in the menu."</string>
    <string name="intro3Title">"Transactions
"</string>
    <string name="intro4Description">Touching a budget will show all transactions for that budget.</string>
    <string name="intro4Title">"Filtering
"</string>
    <string name="intro5Description">"By default the budgets show the current month's spending. To change the time window, touch the calendar icon in the menu."</string>
    <string name="intro5Title">"Budget Window
"</string>
    <string name="intro6Description">Budget and transactions can be backed-up. To export or import data touch the Import/Export icon in the menu on the main page.</string>
    <string name="intro6Title">"Export and Import
"</string>
    <string name="intro7Description">"This app is free, ad-free, and open source. See details by touching About in the menu on the main page.

Please leave feedback in the app store! (:"</string>
    <string name="intro7Title">"Feedback
"</string>
    <string name="json">JSON</string>
    <string name="library_appintro_author">Paolo Rotolo</string>
    <string name="library_appintro_authorWebsite">http://paolorotolo.github.io/</string>
    <string name="library_appintro_classPath">com.github.paolorotolo.appintro</string>
    <string name="library_appintro_isOpenSource">true</string>
    <string name="library_appintro_libraryDescription">AppIntro is a library for making a cool intro in your Android apps.</string>
    <string name="library_appintro_libraryName">AppIntro</string>
    <string name="library_appintro_libraryVersion">3.2.0</string>
    <string name="library_appintro_libraryWebsite">https://github.com/PaoloRotolo/AppIntro</string>
    <string name="library_appintro_licenseId">apache_2_0</string>
    <string name="library_appintro_repositoryLink">https://github.com/PaoloRotolo/AppIntro</string>
    <string name="loading">Loading…</string>
    <string name="name">Name</string>
    <string name="noBudgets">"You don't have any budgets at the moment. Click the + (plus) button up top to get started.

Budget Watch lets you create budgets, then track spending during the month."</string>
    <string name="noCameraPermissionError">Unable to capture receipt without the camera permission</string>
    <string name="noExpenses">"You don't have any expense transactions at the moment. Click the + (plus) button up top to get started."</string>
    <string name="noExpensesForBudget">"You don't have any expense transactions for budget \"%1$s\""</string>
    <string name="noExternalStoragePermissionError">Unable to import or export cards without the external storage permission</string>
    <string name="note">Note</string>
    <string name="receipt">Receipt</string>
    <string name="update">Update</string>
    <string name="value">Value</string>
    <string name="view">View</string>
</resources>